overlapping on sidenav fix

--- a/style.css
+++ b/style.css
@@ -137,14 +137,15 @@ input{
 }
 
 .description{
-
+  position: relative;
   background-color:var(--comp_clr);
   color: var(--text-prm);
   border-radius:0 8px 8px 0;
   box-shadow: 0px 0px 1px 1px #161616;
-  opacity:0;
+  left:-100%;
   max-width:35%;
   transition:opacity 0.25s ease-in-out;
+  z-index: -1;
 }
 
 .complexity{
@@ -293,7 +294,7 @@ input{
    padding: 50px 0;
    background-color: rgb(48, 40, 40);
    transition: all .25s ease;
-   z-index: 2;
+   z-index: 99999;
  }
 
  .Mynav .side{
